--- a/update-event/index.html
+++ b/update-event/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <link rel="stylesheet" href="https://use.typekit.net/dsz3pxk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/dsz3pxk.css">
   </head>
   <body>
     <div id="app"></div>
