--- a/update-event/index.html
+++ b/update-event/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
     <link rel="stylesheet" href="https://use.typekit.net/dsz3pxk.css">
     <link rel="stylesheet" href="https://use.typekit.net/dsz3pxk.css">
+    <script src="https://kit.fontawesome.com/1a674daea2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
